# Echo-CoPilot

./: .env.example  .gitignore  README.md  config.py  download_models.py  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
2015_ChamberQuantificationREV_2017ValveStenosisGuideline_2017VavularRegurgitationGuideline_and_2_more_faiss/: index.pkl
ERP-19-0050_Echocardiography_Normal_values_-_TECHmED_faiss/: index.faiss  index.pkl
ERP-19-0050_faiss/: index.faiss  index.pkl
RAG_VectorDB/: index.pkl
agents/: __init__.py  intelligent_agent.py  react_agent.py
configs/: echo_prime_config.json  echoflow_config.json  panecho_config.json
experiment/: calculate_accuracy.py  compare_all_stability.py  extract_answer.py  rerun_agent_selfcontrast.sh  run_full_accuracy_comparison.sh  run_full_stability_comparison.sh  run_stability_experiment.sh  test_agent_single_llm.py  test_agent_stability_fresh.py  test_llm_baseline.py  test_llm_with_tools.py  visualize_self_contrast.py
models/: model_factory.py
models/echo/: __init__.py  echo_prime_manager.py  echoflow_manager.py
models/general/: __init__.py  base_model_manager.py
tool_repos/EchoPrime1/echo_prime/: model.py
tool_repos/MedSAM2-main/efficient_track_anything/utils/: misc.py
tool_repos/PanEcho-main/: LICENSES.md  README.md  hubconf.py
tool_repos/PanEcho-main/content/: panecho.yml  tasks.md  tasks.npy  tasks.pkl
tool_repos/PanEcho-main/src/: dataset.py  ddp_utils.py  models.py  train.py  train_echonetdynamic.py  train_echonetpediatric.py  utils.py
tool_repos/echonet-measurements/: .gitignore  README.md  gradio.py  inference_2D_image.py  inference_2D_image_folders.py  inference_2D_image_frame_manifest.py  inference_Doppler_image.py  inference_Doppler_image_folders.py  inference_LAvolume_video.py  inference_MV_EperA.py  inference_MV_EperA_folders.py  inference_TAPSE.py  inference_TAPSE_folders.py  requirements.txt  utils.py
tools/: __init__.py
tools/echo/: ECHONET_MEASUREMENT_README.md  __init__.py  biomcp_tool.py  disease.py  echo_image_video_generation.py  echo_segmentation.py  echonet_measurement.py  kg_tool.py  measurement.py  rag.py  report.py  view.py
utils/: cuda_utils.py  echo_knowledge_graph.py  utils.py  video_utils.py
